--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gnosis.pm/safe-core-sdk": "^3.0.0",
     "@gnosis.pm/safe-ethers-lib": "^1.5.0",
     "@rmeissner/safe-apps-react-sdk": "^0.4.0",
+    "@safe-global/safe-core-sdk": "^3.2.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "antd": "^4.22.8",
