--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@gnosis.pm/safe-core-sdk": "^3.0.0",
     "@gnosis.pm/safe-ethers-lib": "^1.5.0",
+    "@gnosis.pm/safe-service-client": "^1.4.0",
     "@rmeissner/safe-apps-react-sdk": "^0.4.0",
     "@safe-global/safe-core-sdk": "^3.2.0",
+    "@safe-global/safe-ethers-lib": "^1.7.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "antd": "^4.22.8",
     "axios": "^0.27.2",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.7.0",
+    "ethers": "^5.7.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
