--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gnosis.pm/safe-core-sdk": "^3.0.0",
     "@gnosis.pm/safe-ethers-lib": "^1.5.0",
     "@gnosis.pm/safe-service-client": "^1.4.0",
+    "@pushprotocol/restapi": "^0.2.2",
     "@rmeissner/safe-apps-react-sdk": "^0.4.0",
     "@safe-global/safe-core-sdk": "^3.2.0",
     "@safe-global/safe-ethers-lib": "^1.7.0",
@@ -19,6 +20,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "antd": "^5.0.2",
     "axios": "^0.27.2",
+    "caip": "^1.1.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.7.2",
     "next": "12.2.5",
